--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -30,3 +30,16 @@
     text-align: left;
   }
 }
+
+/*横並び*/
+.sideBySideCenter {
+  composes: sideBySide;
+  align-items: center;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+    .sideBySideCenter {
+      text-align: left;
+  }
+}
